--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <h1 class="article-headline">Life Insurance For Dad and Mum That Could Pay £237,578 To Your Family</h1>
                 <h2 class="article-subhead">Check To See What You Could Get</h2>
                 <div class="image-caption-wrap">
-                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin"><img src="images/familyImage1.jpeg" alt class="art-main-image viewContentTrack"></a>
+                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16"><img src="images/familyImage1.jpeg" alt class="art-main-image viewContentTrack"></a>
                     <p class="image-caption">Thousands are rushing to secure policies</p>
                 </div>
                 <p>If you're a dad or mum you may be able to get a life insurance policy that <strong>pays out £237,578</strong>.</p>
@@ -315,16 +315,16 @@
                 <p><strong>Step #2</strong> - Just answer a few short questions (takes under a minute) and  will help you find affordable life insurance policies you never realised you could get!</p>
                 <h2 class="subhead">Select your age:</h2>
                 <div class="age-wrap">
-                    <!-- <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="viewContentTrack"><img src="images/20-29.jpeg" alt loading="lazy"></a> -->
-                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="viewContentTrack"><img src="images/30-39.jpeg" alt loading="lazy"></a>
-                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="viewContentTrack"><img src="images/40-49.jpeg" alt loading="lazy"></a>
-                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="viewContentTrack"><img src="images/50-59.jpeg" alt loading="lazy"></a>
-                    <!-- <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="viewContentTrack"><img src="images/over60.jpeg" alt loading="lazy"></a> -->
+                    <!-- <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="viewContentTrack"><img src="images/20-29.jpeg" alt loading="lazy"></a> -->
+                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="viewContentTrack"><img src="images/30-39.jpeg" alt loading="lazy"></a>
+                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="viewContentTrack"><img src="images/40-49.jpeg" alt loading="lazy"></a>
+                    <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="viewContentTrack"><img src="images/50-59.jpeg" alt loading="lazy"></a>
+                    <!-- <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="viewContentTrack"><img src="images/over60.jpeg" alt loading="lazy"></a> -->
                 </div>
-                <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="button viewContentTrack pulse">Get Your Free Quote</a>
+                <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="button viewContentTrack pulse">Get Your Free Quote</a>
             </div>
             <div class="col-lg-3">
-                <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="sticky-banner viewContentTrack"><img src="images/age-banner-blue.jpeg"></a>
+                <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="sticky-banner viewContentTrack"><img src="images/age-banner-blue.jpeg"></a>
             </div>
         </div>
     </div>
@@ -338,7 +338,7 @@
                 <h2><em>Our simple form takes just a minute to fill out!</em></h2>
             </div>
             <div class="col-lg-6">
-                <a href="https://cldmob.com/?a=128484&c=231466&mt=16&s1=lin" class="button viewContentTrack pulse">Get Your Free Quote</a>
+                <a href="https://cldmob.com/?a=128484&c=231466&mt=16" class="button viewContentTrack pulse">Get Your Free Quote</a>
             </div>
         </div>
     </div>
